--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -1,34 +1,53 @@
-<!DOCTYPE html>
+{#{% extends 'base.html.twig' %}
+
+{% block title %}Hello MainController!{% endblock %}
+
+{% block body %}
+<style>
+    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
+    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+</style>
+
+<div class="example-wrapper">
+    <h1>Hello {{ controller_name }}! ✅</h1>
+
+    This friendly message is coming from:
+    <ul>
+        <li>Your controller at <code>C:/Users/Alade/Desktop/symfony_projects/masquageMenu/src/Controller/MainController.php</code></li>
+        <li>Your template at <code>C:/Users/Alade/Desktop/symfony_projects/masquageMenu/templates/main/index.html.twig</code></li>
+    </ul>
+</div>
+{% endblock %}#}
+
+
+<!doctype html>
 <html lang="en" data-bs-theme="auto">
 <head>
-  {% block stylesheets %}
-    {#<link rel="stylesheet" href="{{ asset('build/app.css') }}">#}
-    {{ encore_entry_link_tags('app') }}
-  {% endblock %}
-
-
-  {% block javascripts %}
-    {#<script scr="{{ asset('styles/build/app.js') }}"></script>#}
-    {{ encore_entry_script_tags('app') }}
-  {% endblock %}
-
+  <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/dashboard/">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
   <meta name="generator" content="Hugo 0.122.0">
   <title>Dashboard Template · Bootstrap v5.3</title>
-
-  <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/dashboard/">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
   <!--<link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">    
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <!-- Custom styles for this template -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
   <!-- Custom styles for this template -->
-  <link href="{{asset('build/app.css')}}" rel="stylesheet">
-</head>
 
+  {% block stylesheets %}
+    {#<link rel="stylesheet" href="{{ asset('build/app.css') }}">#}
+    {{ encore_entry_link_tags('app') }}
+  {% endblock %}
+
+  {% block javascripts %}
+    {#<script scr="{{ asset('styles/build/app.js') }}"></script>#}
+    {{ encore_entry_script_tags('app') }}
+    <script src="{{asset('../assets/js/color-modes.js')}}"></script>
+  {% endblock %}
+</head>
 <body>
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
         <symbol id="check2" viewBox="0 0 16 16">
@@ -403,11 +422,8 @@
   </div>
 </div>
 
-  <!--<script src="../assets/dist/js/bootstrap.bundle.min.js"></script>-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.3.2/dist/chart.umd.js" integrity="sha384-eI7PSr3L1XLISH8JdDII5YN/njoSsxfbrkCTnJrzXt+ENP5MOVBxD+l6sEG4zoLp" crossorigin="anonymous"></script>
-  <script src="{{ asset('build/app.js') }}"></script>
-  {#<script src="../../assets/js/color-modes.js"></script>#}
-  <script src="{{asset('../assets/js/color-modes.js')}}"></script>
+<!--<script src="../assets/dist/js/bootstrap.bundle.min.js"></script>-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@4.3.2/dist/chart.umd.js" integrity="sha384-eI7PSr3L1XLISH8JdDII5YN/njoSsxfbrkCTnJrzXt+ENP5MOVBxD+l6sEG4zoLp" crossorigin="anonymous"></script>
 </body>
 </html>
